components/policies/rings/ring-2/kflux-lw-p01/kueue/deny-unallowed-annotations/.chainsaw-test/resources/pipelinerun_with_allowed_annotations.yaml
apiVersion: tekton.dev/v1
kind: PipelineRun
metadata:
  name: pipelinerun-with-allowed-annotations
  # the annotations are generated via `hack/kueue-allowed-vms/generate-allowed-annotations.sh`
  annotations:
    kueue.konflux-ci.dev/requests-aws-ip: "1"
    kueue.konflux-ci.dev/requests-cpu: "1"
    kueue.konflux-ci.dev/requests-konflux-ci-dev-token: "1"
    kueue.konflux-ci.dev/requests-konflux-release: "1"
    kueue.konflux-ci.dev/requests-linux-amd64: "1"
    kueue.konflux-ci.dev/requests-linux-arm64: "1"
    kueue.konflux-ci.dev/requests-linux-x86-64: "1"
    kueue.konflux-ci.dev/requests-local: "1"
    kueue.konflux-ci.dev/requests-localhost: "1"
    kueue.konflux-ci.dev/requests-memory: "1"
    kueue.konflux-ci.dev/requests-mintmaker: "1"
